Moved over to scss structure, fiddled with aesthetic.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,8 @@
 
   <body>
 
-    <div class="header">
-      <div class="section-inner">
+    <div class="header mobile-collapse head-collapse">
+      <div class="section-inner mobile-collapse ">
         <div class ="title"> 
         <p class="userinfo">
           <h1>MTG TRADE BINDER</h1>
@@ -34,7 +34,7 @@
     
     <!-- nav -->
     <div class="nav">
-      <div class="section-inner">
+      <div class="section-inner mobile-collapse ">
         <div class="nav-button nav-button-search"><%= link_to image_tag( src="http://www.clker.com/cliparts/a/4/a/a/13498043761678328666Zoom%20Enabled.svg"), cards_path%></p></div>
         <div class="nav-button  nav-button-tradebinder"><%= link_to image_tag(src= "http://www.clker.com/cliparts/t/x/a/6/X/j/folder.svg"), cards_path%></p></div>
         <div class="nav-button nav-button-wishlist"><%= link_to image_tag(src = "http://www.clker.com/cliparts/6/5/f/7/11970933791879152852johnny_automatic_sleeping_girl.svg"), cards_path%></p></div>
