--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,18 +10,25 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
  *= require_self
+ *= require nav-bar
+ *= require searchbox
+ *= require usercard
+ *= require variables
  */
 
  /* *** PAGE *** */
+
+
+
 		h1, h2, h3, h4, h5, h6, p {
 	margin: 0;
 	padding: 0;
 }
-	label 
+	label {
 		font-size: 2em;
-	} 
+	}
+	
 
 
 p {
@@ -39,8 +46,7 @@ body {
 	font-family: Helvetica, Arial, sans-serif;
 	padding: 0;
 	margin: 0;
-	background-image: url("http://i41.tinypic.com/2el9mqf.jpg");
-
+	background-color: white;
 }
 
 img {
@@ -50,42 +56,12 @@ img {
 }
 
 
-div.main {
-	width: 65%;
-	float: left;
-	margin-right: 5%;
-}
-div.side {
-	width: 30%;
-	float: left;
-}
-
-.color-search-0 { color: #879A2B }	/* Main Primary color */
-.color-search-1 { color: #D6E87E }
-.color-search-2 { color: #ABBF4D }
-.color-search-3 { color: #5E6F0E }
-.color-search-4 { color: #3C4800 }
-
-.color-binder-1-0 { color: #8F2747 }	/* Main Secondary color (1) */
-.color-binder-1-1 { color: #D77492 }
-.color-binder-1-2 { color: #B14767 }
-.color-binder-1-3 { color: #670D28 }
-.color-binder-1-4 { color: #430014 }
-
-.color-user-2-0 { color: #43256C }	/* Main Secondary color (2) */
-.color-user-2-1 { color: #7C5FA3 }
-.color-user-2-2 { color: #5C3D86 }
-.color-user-2-3 { color: #2A104E }
-.color-user-2-4 { color: #180433 }
-
-
-
 
 
 /* Section Inner */
 div.section-inner {
-	max-width: 1100px;
-	padding: 0 25px;
+	width: 80%;
+	padding: 0; /*25px*/ 
 	margin: 0 auto;
 }
 
@@ -93,9 +69,10 @@ div.section-inner {
 
 /* Header */
 div.header {
+	width: 80%;
 	margin-right: auto;
 	margin-left: auto;
-	background-image: url(http://mystery756.files.wordpress.com/2013/05/lightning.jpg);
+	background-color: #AAD8B0;
 	max-width: 1100px;
 	padding: 40px 0;
 	height: 100px;
@@ -107,46 +84,6 @@ div.title {
     margin-right: auto; 
 
 }
-/* Navigation */
-div.nav {
-
-	height:40% ;
-}
-
-div.nav ul {
-	margin: 0;
-	padding: 0;
-}	
-
-div.nav-button {
-	height: 60px;
-	text-align: center;
-	width: 25%;
-	float: left;
-	margin: 0;
-	padding: 0;
-	background-color: red;
-}
-
-div.nav-button img {
-	padding-top: 5px;
-	width: 50px;
-	height: auto;
-}
-div.nav-button-search{
-	background-color:  yellow;
-} 
-div.nav-button-tradebinder {
-	background-color:  maroon;
-	
-}
-div.nav-button-wishlist{
-	background-color: grey;
-
-}
-div.nav-button-planeswalker{
-	background-color: aqua;
-}
 
 
 
@@ -156,31 +93,7 @@ div.body-content {
 	padding: 50px 0;
 }
 
-div.search-section {
-	background-color: purple;
-	width: 70%;
-	height: auto;
-	margin-left: auto;
-    margin-right: auto; 
-    margin-top: 100px ;
 
-}
-div.search-section h1{
-	text-align: center;
-}
-
-
-}
-div.form-box{
-	background-color: red;
-	opacity: 0.2;
-	margin-right: auto;
-	margin-left: auto;
-	padding: 1%;	
-}
-div.form-box-test{
-
-}
 
 
 
@@ -221,59 +134,7 @@ div.body-content-user {
 	margin-left: auto;
 }
 
-div.id-section{
-	width: 75%;
-	padding: 5px 5px 5px 5px ;
-	margin-left: auto;
-	margin-right: auto;
-}
 
-div.idcard{
-	margin-top: 100px;
-	clear:both;
-	width: 500px;
-	height: 700px;
-	margin-left: auto;
-	margin-right: auto;
-}
-
-div.idcard-magic-card{
-	position:absolute;
-	z-index: 3;
-}
-div.idcard-user-picture {
-	z-index: 2;
-	margin-left: auto;
-	margin-right: auto;
-	width: 500px;
-	height: 600px;
-	overflow: hidden;
-	position:absolute;
-}
-div.idcard-user-picture img {
-	width:100%;
-	height: auto;
-}
-div.idcard-user-name{
-	position: absolute;
-	z-index: 4;
-	width: 400px;
-	margin-top: 42px;
-	margin-left: 50px;
-	font-family: 'Book Antiqua', Palatino, 'Palatino Linotype', 'Palatino LT STD', Georgia, serif;
-	font-size: 26px;
-	text-align: center;
-}
-div.idcard-user-info{
-	position: absolute;
-	z-index: 4;
-	width: 400px;
-	margin-top: 500px;
-	margin-left: 50px;
-	font-family: 'Book Antiqua', Palatino, 'Palatino Linotype', 'Palatino LT STD', Georgia, serif;
-	font-size: 26px;
-	text-align: left;
-}
 
 
 /* *** END OF DISPLAY *** */
@@ -326,14 +187,21 @@ div.footer {
 	width: auto;
 	float: none;
 	margin-right: 0;
+	width: 100%;
+
 	}
+	
 	div.nav-button {
 	width: 25%;
 	font-size: 16px;
 	}
 	img.skulls {
 	display: none;
-	
 	}
+	div.section-inner {
+	max-width: 100%;
+	padding: 0;
+	margin: 0 ;
+}
 
 }
