--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -1,6 +1,6 @@
 
 
-<div class="section-inner search-theme">
+<div class="section-inner search-theme mobile-collapse">
 <%= render '/cards/search' %>
 
 <!-- if statement needs to be fixed, this is a lazy hack to get it to work
