--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<div class="section-inner user-theme" >
+<div class="section-inner user-theme mobile-collapse" >
 	<div class="body-content body-content-user">
 		<div class="id-section">
 			
