User show page now lists users info, namespaced trade routes under user, adding links in user index to trade views

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,8 @@
 	<% @users.each do |user| %>
 		<li>
 			<%= user.first_name %>, <%= user.last_name %>
-			<%= link_to "Binder", cards_path %>
+			<%= link_to "Binder", user_path(user.id) %>
+			<%= link_to "Propose Trade", new_trade_path %>
 		</li>
 	<% end %>
 </ul>
