--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,10 +3,10 @@
 		<div class="id-section">
 			
 			<div class= "idcard">
-				<div class="idcard-user-name"><%= current_user.first_name %> <%= current_user.last_name %> </div>
+				<div class="idcard-user-name"><%= @user.first_name %> <%= @user.last_name %> </div>
 				<div class="idcard-user-info">
-					-Email: <%= current_user.email %> <br/>
-					-DCI: Number <%= current_user.dci_number %>
+					-Email: <%= @user.email %> <br/>
+					-DCI: Number <%= @user.dci_number %>
 				</div>
 					
 				<div class="idcard-user-picture"><img src= "http://images.starpulse.com/Photos/Previews/Allen-Toussaint-r01.jpg"></div> 				<!-- Replace with user.picture_id if we choose to implement feature -->
@@ -15,14 +15,14 @@
 			</div>
 			
 			<h2>Your cards</h2>
-				<% current_user.tradeable_cards.each do |listed_card| %>
+				<% @user.tradeable_cards.each do |listed_card| %>
 					<%= listed_card.amount %>
 					<%= listed_card.card.name %>
 					<br>
 				<% end %>			
 
 			<h2>Wishlist</h2>
-				<% current_user.wanted_cards.each do |listed_card| %>
+				<% @user.wanted_cards.each do |listed_card| %>
 					<%= listed_card.amount %>
 					<%= listed_card.card.name %>
 					<br>
