Added trade index views for a users active trades and users index view

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,7 +3,7 @@
 		<li>
 			<%= user.first_name %>, <%= user.last_name %>
 			<%= link_to "Binder", user_path(user.id) %>
-			<%= link_to "Propose Trade", new_trade_path %>
+			<%= link_to "Propose Trade", new_user_trade_path(user.id) %>
 		</li>
 	<% end %>
 </ul>
