--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 
   <body>
 
-    <div class="header mobile-collapse head-collapse">
+    <div class="header mobile-collapse ">
       <div class="section-inner mobile-collapse ">
         <div class ="title"> 
         <p class="userinfo">
@@ -34,18 +34,27 @@
     
     
     <!-- nav -->
-    <div class="nav">
-      <div class="section-inner mobile-collapse ">
-        <div class="nav-button nav-button-search"><%= link_to image_tag( src="http://www.clker.com/cliparts/a/4/a/a/13498043761678328666Zoom%20Enabled.svg"), cards_path%></p></div>
-        <div class="nav-button  nav-button-tradebinder"><%= link_to image_tag(src= "http://www.clker.com/cliparts/t/x/a/6/X/j/folder.svg"), cards_path%></p></div>
-        <div class="nav-button nav-button-wishlist"><%= link_to image_tag(src = "http://www.clker.com/cliparts/6/5/f/7/11970933791879152852johnny_automatic_sleeping_girl.svg"), cards_path%></p></div>
+  
+    <div class="nav ">
+        <div class="nav-button nav-button-search">
+         <%= link_to image_tag( src="http://www.clker.com/cliparts/a/4/a/a/13498043761678328666Zoom%20Enabled.svg"), cards_path%>
+        </div>
+        <div class="nav-button  nav-button-tradebinder">
+          <%= link_to image_tag(src= "http://www.clker.com/cliparts/t/x/a/6/X/j/folder.svg"), cards_path%>
+        </div>
+        <div class="nav-button nav-button-wishlist">
+          <%= link_to image_tag(src = "http://www.clker.com/cliparts/6/5/f/7/11970933791879152852johnny_automatic_sleeping_girl.svg"), cards_path%>
+        </div>
         <% if current_user %>
-          <div class="nav-button nav-button-planeswalker"><%= link_to image_tag(src = "http://www.clker.com/cliparts/5/b/9/8/11954222721516972319alien_wizard_fenn_03.svg"), user_path(current_user.id)  %></p></div>
+          <div class="nav-button nav-button-planeswalker">
+            <%= link_to image_tag(src = "http://www.clker.com/cliparts/5/b/9/8/11954222721516972319alien_wizard_fenn_03.svg"), user_path(current_user.id)  %>
+          </div>
         <% else %>
-          <div class="nav-button nav-button-planeswalker"><%= link_to image_tag(src = "http://www.clker.com/cliparts/5/b/9/8/11954222721516972319alien_wizard_fenn_03.svg"), cards_path  %></p></div>
+          <div class="nav-button nav-button-planeswalker">
+            <%= link_to image_tag(src = "http://www.clker.com/cliparts/5/b/9/8/11954222721516972319alien_wizard_fenn_03.svg"), cards_path  %>
+          </div>
         <% end %>
       </div>
-    </div><!--/nav-->
 
    
       <%= yield %>
