--- a/app/views/trades/edit.html.erb
+++ b/app/views/trades/edit.html.erb
@@ -4,14 +4,14 @@
 
 
 			<% current_user.tradeable_cards.each do |listed_card| %>
-			 	<%= check_box_tag "start_initiator_list[]", checked_value = listed_card.id, (true if @trade.start_initiator_list.include? listed_card.id.to_s ) %>
+			 	<%= check_box_tag "cards_from_initiator[]", checked_value = listed_card.id, (true if @trade.cards_from_initiator.include? listed_card.id.to_s ) %>
 			 	<%= listed_card.card.name %>
 			 	<br>
 			<% end %>
 
 
 			<% @user.tradeable_cards.each do |listed_card| %>
-			 	<%= check_box_tag "start_receiver_list[]", checked_value = listed_card.id, (true if @trade.start_initiator_list.include? listed_card.id.to_s ) %>
+			 	<%= check_box_tag "cards_from_receiver[]", checked_value = listed_card.id, (true if @trade.cards_from_receiver.include? listed_card.id.to_s ) %>
 			 	<%= listed_card.card.name %>
 			 	<br>
 			<% end %>
