--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,11 @@
-<ul>
-	<% @users.each do |user| %>
-		<li>
-			<%= user.first_name %>, <%= user.last_name %>
-			<%= link_to "Binder", user_path(user.id) %>
-			<%= link_to "Propose Trade", new_user_trade_path(user.id) %>
-		</li>
-	<% end %>
-</ul>
+<div class="section-inner search-theme mobile-collapse">
+	<ul>
+		<% @users.each do |user| %>
+			<li>
+				<%= user.first_name %>, <%= user.last_name %>
+				<%= link_to "Binder", user_path(user.id) %>
+				<%= link_to "Propose Trade", new_user_trade_path(user.id) %>
+			</li>
+		<% end %>
+	</ul>
+</div>
