Added logic in user controller to display users by proximity to current

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,3 @@
-<% for location in @bert.nearbys(100) %>
-  <%= link_to location.address, location %> (<%= location.distance.round(2) %> miles)
+<% @current_position.each do |pimpdaddy| %>
+	<%= pimpdaddy.email %>,
 <% end %>
