fiddled a bit tee-hee, added a friends view, controller and route for late (winky face)

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,8 +14,9 @@
  *= require searchbox
  *= require usercard
  *= require variables
- *= require header
+ *= require headerfooter
  *= require cardsdisplay 
+ *= require friends
  */
 
  /* *** PAGE *** */
@@ -65,6 +66,8 @@ div.section-inner {
 	padding: 0 5% 0 5% ; /*25px*/ 
 	margin: 0 auto;
 	clear: both;
+	max-height: 100%;
+
 
 }
 
@@ -80,12 +83,6 @@ div.body-content-user {
 }
 
 
-div.footer {
-	background-color: #3f3f3f;
-	color: #FFF;
-	padding: 15px 0;
-	text-align: center;
-}
 
 
 .clearfix:before, .clearfix:after { content: ""; display: table; }
