--- a/app/assets/stylesheets/nav-bar.scss
+++ b/app/assets/stylesheets/nav-bar.scss
@@ -34,14 +34,14 @@
 		background-color: $search-color;	
 
 	} 
-	.nav-button-tradebinder {
-		background-color:  $binder-color;		
+	.nav-button-trades {
+		background-color:  $trade-color;		
 	}
-	.nav-button-wishlist{
+	.nav-button-user{
 		background-color: $user-color;
 
 	}
-	.nav-button-planeswalker{
-		background-color: $other-1-color;
+	.nav-button-friends{
+		background-color: $friends-color;
 	}
 }
