--- a/app/assets/stylesheets/usercard.scss
+++ b/app/assets/stylesheets/usercard.scss
@@ -1,12 +1,15 @@
-$search-color:  #96CEB4; 	
-$binder-color:  #FFEEAD; 
-$wishlist-color: 	#FF6F69; 
-$user-color: #FF9452; 
-$other-2-color: #AAD8B0; 
-
+@import "variables.scss";
+ div.friends-theme {
+ 	background-color: $friends-color;
+ }
 
 div.user-theme{
 	background-color: $user-color;
+}
+
+
+div.trade-theme{
+	background-color: $trade-color;
 }
 
 div.id-section{
