--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -1,5 +1,5 @@
 $search-color:  #96CEB4; 	
-$binder-color:  #FFEEAD; 
+$trade-color:  #FFEEAD; 
 $user-color: 	#FF6F69; 
-$other-1-color: #FF9452; 
-$other-2-color: #AAD8B0; 
+$friends-color: #FF9452; 
+$headfoot-color: #AAB5C5; 
