finished mana display. Used parsing method that creates image links to each mana img

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,8 @@
  *= require usercard
  *= require variables
  *= require header
- *= require cardsdisplay 
+ *= require cardsdisplay
+ *= require binder_table  
  */
 
  /* *** PAGE *** */
