--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,85 +7,110 @@
 				<div class="idcard-user-info">
 					-Email: <%= @user.email %> <br/>
 					-DCI: Number <%= @user.dci_number %>
+				</div>					
+				<div class="idcard-user-picture">
+					<img src= "http://images.starpulse.com/Photos/Previews/Allen-Toussaint-r01.jpg">
+				</div> 				<!-- Replace with user.picture_id if we choose to implement feature -->
+				<div class="idcard-magic-card">
+					<img src = "http://fc02.deviantart.net/fs71/f/2013/022/3/b/mtg_blank_white_card__by_growlydave-d5sco15.png">
 				</div>
-					
-				<div class="idcard-user-picture"><img src= "http://images.starpulse.com/Photos/Previews/Allen-Toussaint-r01.jpg"></div> 				<!-- Replace with user.picture_id if we choose to implement feature -->
-				<div class="idcard-magic-card"><img src = "http://fc02.deviantart.net/fs71/f/2013/022/3/b/mtg_blank_white_card__by_growlydave-d5sco15.png"></div>
 	
 			</div>
 
 
 
-
+	<h2>Trade Binder</h2>
+		</br>
 			<table>
 				<tbody>
 					<tr>
 						<th>
+							<h4>Quantity</h4>
+						</th>
+						<th>
 							<h4>Card Name</h4>
 						</th>
 						<th>
-							<h4>Quantity</h4>
+							<h4>From Set</h4>
 						</th>						
 						<th>
 							<h4>Card Type</h4>
 						</th>
-						<th>
-							<h4>From Set</h4>
-						</th>
+
 						<th>
 							<h4>Color/Cost</h4>
 						</th>
 					</tr>
-
-				<% current_user.tradeable_cards.each do |listed_card| %>
-
+						<% current_user.tradeable_cards.each do |listed_card| %>
 					<tr>
-						<td>
-							<%= listed_card.card.name %>
-						</td>
 						<td>
 							<%= listed_card.amount %>
 						</td>
-
-					<% type_array = [] %>
-
-					<%  listed_card.card.card_types.each { |type| type_array << type.name  } %>
-
+						<td>
+							<%= listed_card.card.name %>
+						</td>
+						<td>							
+							 <%= listed_card.card.multiverseid %> - <%= listed_card.card.card_set.name %>	 
+						</td>
+							<% type_array = [] %>
+							<%  listed_card.card.card_types.each { |type| type_array << type.name  } %>
 						<td>
 							<%= type_array %>
-						</td>
-						<td>
-							
-							 <%= listed_card.card.multiverseid %> - <%= listed_card.card.card_set.name %>
-							 
-						</td>
-
- 
-						<td>
-
-														
-
-							<img src="http://mtgimage.com/symbol/mana/
-
-							<%= listed_card.card.mana_cost.delete "{}" %>
-
-							/16.gif">
-
-							
+						</td> 
+						<td>				
+							<%= all_mana_cost_images(listed_card.card) %>							
 						</td>									
 					</tr>
-					<% end %>
+				<% end %>
 				</tbody>
 			</table>
-	
+		</br>
 
-			<h2>Wishlist</h2>
-				<% @user.wanted_cards.each do |listed_card| %>
-					<%= listed_card.amount %>
-					<%= listed_card.card.name %>
-					<br>
+	<h2>Wish List</h2>
+		</br>
+			<table>
+				<tbody>
+					<tr>
+						<th>
+							<h4>Quantity</h4>
+						</th>
+						<th>
+							<h4>Card Name</h4>
+						</th>
+						<th>
+							<h4>From Set</h4>
+						</th>						
+						<th>
+							<h4>Card Type</h4>
+						</th>
+
+						<th>
+							<h4>Color/Cost</h4>
+						</th>
+					</tr>
+						<% @user.wanted_cards.each do |listed_card| %>
+					<tr>
+						<td>
+							<%= listed_card.amount %>
+						</td>
+						<td>
+							<%= listed_card.card.name %>
+						</td>
+						<td>							
+							 <%= listed_card.card.multiverseid %> - <%= listed_card.card.card_set.name %>	 
+						</td>
+							<% type_array = [] %>
+							<%  listed_card.card.card_types.each { |type| type_array << type.name  } %>
+						<td>
+							<%= type_array %>
+						</td> 
+						<td>													
+							<%= all_mana_cost_images(listed_card.card) %>
+						</td>									
+					</tr>
 				<% end %>
-
+				</tbody>
+			</table>	
 		</div>
 	</div>
 </div>
