Fiddled around, added distance

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,6 +17,7 @@
  *= require headerfooter
  *= require cardsdisplay 
  *= require friends
+
  */
 
  /* *** PAGE *** */
@@ -49,6 +50,7 @@ body {
 	padding: 0;
 	margin: 0;
 	background-color: white;
+	height: 100%
 }
 
 img {
