--- a/app/assets/stylesheets/nav-bar.scss
+++ b/app/assets/stylesheets/nav-bar.scss
@@ -6,15 +6,13 @@
 // switch inner to entire section? navbar is not being wide enough
 .nav {
 		background-color: red;
-		height: auto;
+		height: 60px;
 		width: 80%;
 		margin-right: auto;
 		margin-left: auto;
 
-	.nav ul {
-		margin: 0;
-		padding: 0;
-	}	
+
+
 
 	.nav-button {
 		height: 60px;
