--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,14 +21,6 @@
 			I SHOULD BE HERE! <%= pimpdaddy.email %>
 		<% end %>
 			
-			<h2>Your cards</h2>
-				<% @user.tradeable_cards.each do |listed_card| %>
-					<%= listed_card.amount %>
-					<%= listed_card.card.name %>
-					<br>
-				<% end %>			
-
-
 
 	<h2>Trade Binder</h2>
 		</br>
@@ -51,6 +43,9 @@
 						<th>
 							<h4>Color/Cost</h4>
 						</th>
+						<th>
+							<h4>Propose Trade</h4>
+						</th>
 					</tr>
 						<% current_user.tradeable_cards.each do |listed_card| %>
 					<tr>
@@ -58,7 +53,7 @@
 							<%= listed_card.amount %>
 						</td>
 						<td>
-							<%= listed_card.card.name %>
+							<%= link_to(listed_card.card.name, card_path)  %>
 						</td>
 						<td>							
 							 <%= listed_card.card.multiverseid %> - <%= listed_card.card.card_set.name %>	 
@@ -71,10 +66,14 @@
 						<td>				
 							<%= all_mana_cost_images(listed_card.card) %>							
 						</td>									
-					</tr>
+					
+					<td>
+						<%= link_to "Propose Trade", new_user_trade_path(current_user.id) %>
+					</td>
 				<% end %>
 				</tbody>
 			</table>
+
 		</br>
 
 	<h2>Wish List</h2>
@@ -98,6 +97,9 @@
 						<th>
 							<h4>Color/Cost</h4>
 						</th>
+						<th>
+							<h4>Search Nearby Cards</h4>
+						</th>
 					</tr>
 						<% @user.wanted_cards.each do |listed_card| %>
 					<tr>
@@ -117,6 +119,8 @@
 						</td> 
 						<td>													
 							<%= all_mana_cost_images(listed_card.card) %>
+						</td>
+						<td>									<%= link_to "Search for available cards nearby", new_user_trade_path(current_user.id) %>
 						</td>									
 					</tr>
 				<% end %>
