--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,11 +10,11 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
-  *= require nav-bar
+ *= require nav-bar
  *= require searchbox
  *= require usercard
  *= require variables
- *= require header
+ *= require headerfooter
  *= require cardsdisplay
  *= require binder_table  
  *= require headerfooter
