Tinker tinker stinker

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -2,4 +2,9 @@ $search-color:  #96CEB4;
 $trade-color:  #FFEEAD; 
 $user-color: 	#FF6F69; 
 $friends-color: #FF9452; 
-$headfoot-color: #AAB5C5; 
+$headfoot-color: #E69CB1; 
+$config-color: #B9E299;
+
+.config-theme{
+	background-color: $config-color
+}
