--- a/app/assets/stylesheets/nav-bar.scss
+++ b/app/assets/stylesheets/nav-bar.scss
@@ -23,6 +23,14 @@
 		padding: 0;
 	}
 
+	.nav-big-button {
+		height: 60px;
+		text-align: center;
+		width: 75%;
+		float: left;
+		margin: 0;
+		padding: 0;
+	}
 	.nav-button img {
 		padding-top: 5px;
 		width: 50px;
