--- a/app/assets/stylesheets/headerfooter.scss
+++ b/app/assets/stylesheets/headerfooter.scss
@@ -25,3 +25,14 @@
 	text-align: center;
 	margin-bottom: 0%;
 }
+div.search-theme{
+	background-color: $search-color;
+}
+div.user-theme{
+	background-color: $user-color;
+}
+
+
+div.trade-theme{
+	background-color: $trade-color;
+}
