--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -1,10 +1,35 @@
-$search-color:  #96CEB4; 	
-$trade-color:  #FFEEAD; 
-$user-color: 	#FF6F69; 
-$friends-color: #FF9452; 
-$headfoot-color: #E69CB1; 
-$config-color: #B9E299;
+// $search-color:  #96CEB4; 	
+// $trade-color:  #FFEEAD; 
+// $user-color: 	#FF6F69; 
+// $friends-color: #FF9452; 
+// $headfoot-color: #E69CB1; 
+// $config-color: #B9E299;
+
+$search-color:  #168CB0; 	
+$trade-color:  #16D339; 
+$user-color: 	#17BFAE; 
+$friends-color: #F27E93; 
+$headfoot-color: #EC5A4B; 
+$config-color: #EDC07F; 
 
 .config-theme{
 	background-color: $config-color
+}
+ .friends-theme {
+ 	background-color: $friends-color;
+ 	img {
+ 		padding-top: 50px;
+ 		margin-right: auto;
+ 		margin-left: auto;
+ 		width:3000px;
+ 	}
+ }
+
+div.user-theme{
+	background-color: $user-color;
+}
+
+
+div.trade-theme{
+	background-color: $trade-color;
 }
