replaced mana letters with images in the card search form

--- a/app/views/cards/_search.html.erb
+++ b/app/views/cards/_search.html.erb
@@ -41,15 +41,15 @@
 			</div>
 			<div class = "form-box">						
 				<%= ff.check_box(:white) %>
-				<%= ff.label(:white, "W") %>
+				<%= ff.label(:white, image_tag( src="http://mtgimage.com/symbol/mana/w/32.gif")) %>
 				<%= ff.check_box(:blue) %>
-				<%= ff.label(:blue, "U") %>
+				<%= ff.label(:blue, image_tag( src="http://mtgimage.com/symbol/mana/u/32.gif")) %>
 				<%= ff.check_box(:black) %>
-				<%= ff.label(:black, "B") %>
+				<%= ff.label(:black, image_tag( src="http://mtgimage.com/symbol/mana/b/32.gif")) %>
 				<%= ff.check_box(:red) %>
-				<%= ff.label(:red, "R") %>
+				<%= ff.label(:red, image_tag( src="http://mtgimage.com/symbol/mana/r/32.gif")) %>
 				<%= ff.check_box(:green) %>
-				<%= ff.label(:green, "G") %>
+				<%= ff.label(:green, image_tag( src="http://mtgimage.com/symbol/mana/g/32.gif")) %>
 			</div>
 			<div class = "form-box">
 				<%= ff.label :cmcmod, "CMC:" %>
