--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -111,7 +111,7 @@
 							<%= listed_card.amount %>
 						</td>
 						<td>
-							<%= listed_card.card.name %>
+							<%= link_to(listed_card.card.name, card_path)  %>
 						</td>
 						<td>							
 							 <%= listed_card.card.multiverseid %> - <%= listed_card.card.card_set.name %>	 
