--- a/app/views/trades/edit.html.erb
+++ b/app/views/trades/edit.html.erb
@@ -1,23 +1,40 @@
 <div class="section-inner search-theme mobile-collapse">
 
-	<%= form_for @trade do |f| %>
 
+	<% if @trade.initiator == current_user %>
+		<%= form_for @trade do |f| %>
 
+			<h2>Your Cards</h2>
 			<% current_user.tradeable_cards.each do |listed_card| %>
-			 	<%= check_box_tag "cards_from_initiator[]", checked_value = listed_card.id, (true if @trade.cards_from_initiator.include? listed_card.id.to_s ) %>
-			 	<%= listed_card.card.name %>
-			 	<br>
+				<%= check_box_tag "trade[cards_from_initiator][]", listed_card.id, (true if @trade.cards_from_initiator.include?(listed_card.id)) %>
+				<%= listed_card.card.name %> <br>
 			<% end %>
 
-
+			<h2><%= @user.first_name%>'s Cards</h2>
 			<% @user.tradeable_cards.each do |listed_card| %>
-			 	<%= check_box_tag "cards_from_receiver[]", checked_value = listed_card.id, (true if @trade.cards_from_receiver.include? listed_card.id.to_s ) %>
-			 	<%= listed_card.card.name %>
-			 	<br>
+				<%= check_box_tag "trade[cards_from_receiver][]", listed_card.id, (true if @trade.cards_from_receiver.include?(listed_card.id)) %>
+				<%= listed_card.card.name %> <br>
 			<% end %>
 
+			<%= f.submit "Propose Amended Trade" %>
+		<% end %>
 
+	<% elsif @trade.receiver == current_user %>
+		<%= form_for @trade do |f| %>
 
-		<%= f.submit "Propose Amended Trade" %>
+			<h2>Your Cards</h2>
+			<% current_user.tradeable_cards.each do |listed_card| %>
+				<%= check_box_tag "trade[cards_from_receiver][]", listed_card.id, (true if @trade.cards_from_receiver.include?(listed_card.id)) %>
+				<%= listed_card.card.name %> <br>
+			<% end %>
+
+			<h2><%= @user.first_name%>'s Cards</h2>
+			<% @user.tradeable_cards.each do |listed_card| %>
+				<%= check_box_tag "trade[cards_from_initiator][]", listed_card.id, (true if @trade.cards_from_initiator.include?(listed_card.id)) %>
+				<%= listed_card.card.name %> <br>
+			<% end %>
+
+			<%= f.submit "Propose Amended Trade" %>
+		<% end %>
 	<% end %>
 </div>
