--- a/app/views/trades/index.html.erb
+++ b/app/views/trades/index.html.erb
@@ -1,10 +1,12 @@
 <div class="section-inner search-theme mobile-collapse">
 	<h1>Active Trades</h1>
 
-	<% @trades.each do |trade| %>
-		Trade with <%= trade.receiver.first_name if trade.receiver %>
-		<%= link_to "Modify Trade", edit_trade_path(trade.id) %>
-		<%= link_to "Cancel Trade", trade_path(trade.id), method: :destroy %>
-		<br>
+	<% if @trades.count > 0 %>
+		<% @trades.each do |trade| %>
+			Trade with <%= trade.initiator == current_user.first_name ? trade.receiver.first_name : trade.initiator.first_name  %>
+			<%= link_to "Modify Trade #{trade.id}", edit_trade_path(trade.id) %>
+			<%= link_to "Cancel Trade", trade_path(trade.id), method: :destroy %>
+			<br>
+		<% end %>
 	<% end %>
 </div>
