--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,39 +1,41 @@
-<h1>Sign Up</h1>
+<div class="section-inner search-theme mobile-collapse">
+  <h1>Sign Up</h1>
 
-<%= form_for @user do |f| %>
-  <% if @user.errors.any? %>
-    <div class="error_messages">
-      <h2>Form is invalid</h2>
-      <ul>
-        <% for message in @user.errors.full_messages %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
+  <%= form_for @user do |f| %>
+    <% if @user.errors.any? %>
+      <div class="error_messages">
+        <h2>Form is invalid</h2>
+        <ul>
+          <% for message in @user.errors.full_messages %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+    <div class="field">
+      <%= f.label :email %><br/>
+      <%= f.text_field :email %>
     </div>
+    <div class="field">
+      <%= f.label :first_Name %><br/>
+      <%= f.text_field :first_name %>
+    </div>
+    <div class="field">
+      <%= f.label :last_name %><br/>
+      <%= f.text_field :last_name %>
+    </div>
+     <div class="field">
+      <%= f.label :dci_Number %><br/>
+      <%= f.text_field :dci_number %>
+    </div>
+    <div class="field">
+      <%= f.label :password %><br/>
+      <%= f.password_field :password %>
+    </div>
+    <div class="field">
+      <%= f.label :password_confirmation %><br/>
+      <%= f.password_field :password_confirmation %>
+    </div>
+    <div class="actions"><%= f.submit %></div>
   <% end %>
-  <div class="field">
-    <%= f.label :email %><br/>
-    <%= f.text_field :email %>
-  </div>
-  <div class="field">
-    <%= f.label :first_Name %><br/>
-    <%= f.text_field :first_name %>
-  </div>
-  <div class="field">
-    <%= f.label :last_name %><br/>
-    <%= f.text_field :last_name %>
-  </div>
-   <div class="field">
-    <%= f.label :dci_Number %><br/>
-    <%= f.text_field :dci_number %>
-  </div>
-  <div class="field">
-    <%= f.label :password %><br/>
-    <%= f.password_field :password %>
-  </div>
-  <div class="field">
-    <%= f.label :password_confirmation %><br/>
-    <%= f.password_field :password_confirmation %>
-  </div>
-  <div class="actions"><%= f.submit %></div>
-<% end %>
+</div>
