--- a/app/views/trades/index.html.erb
+++ b/app/views/trades/index.html.erb
@@ -3,7 +3,8 @@
 
 	<% if @trades.count > 0 %>
 		<% @trades.each do |trade| %>
-			Trade with <%= trade.initiator == current_user.first_name ? trade.receiver.first_name : trade.initiator.first_name  %>
+			Trade with <%= trade.initiator == current_user ? trade.receiver.first_name : trade.initiator.first_name  %>
+			<%= link_to "View Trade #{trade.id}", trade_path(trade.id) %>
 			<%= link_to "Modify Trade #{trade.id}", edit_trade_path(trade.id) %>
 			<%= link_to "Cancel Trade", trade_path(trade.id), method: :destroy %>
 			<br>
