--- a/app/views/trades/show.html.erb
+++ b/app/views/trades/show.html.erb
@@ -31,5 +31,7 @@
 
 	<% end %>
 	<%= button_to "Accept Trade", accept_trade_path(@trade.id) %>
-	<%= link_to "Modify Trade", edit_trade_path(@trade.id) %>
+	<% unless @trade.status == "complete" %>
+		<%= link_to "Modify Trade", edit_trade_path(@trade.id) %>
+	<% end %>
 </div>
