--- a/app/views/cards/_card_display.html.erb
+++ b/app/views/cards/_card_display.html.erb
@@ -13,7 +13,7 @@
 						<% j = "second" if i == 2 %>
 						<% j = "last" if i == 3 %>
 						<div class="one-third one-third-<%= "#{j}" %> mobile-collapse">
-							<img class="card" src="http://mtgimage.com/setname/<%="#{card.card_set.name}"%>/<%= "#{card.name}" %>.jpg" alt="A bird on a fence" />
+							<img class="card search-border" src="http://mtgimage.com/setname/<%="#{card.card_set.name}"%>/<%= "#{card.name}" %>.jpg" alt="A bird on a fence" />
 							<h2>Card Name: <%= card['name'] %>  <%= card['manaCost'] %> </h2>
 							<p><%= card['type'] %></p> <br/>
 							<p>Card Text: <%= card['text'] %> </p> <br/>
