--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -13,9 +13,11 @@ $headfoot-color: #EC5A4B;
 $config-color: #EDC07F; 
 
 .config-theme{
-	background-color: $config-color
+	background-color: $config-color;
+	padding: 5%, 5%, 5%, 5%; 
 }
- .friends-theme {
+ 
+.friends-theme {
  	background-color: $friends-color;
  	img {
  		padding-top: 50px;
