--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,8 @@
     
     <!-- nav -->
   
-    <div class="nav mobile-collapse ">
+    <div class="nav">
+      <div class= "evilwrapper">
     
         <div class="nav-button nav-button-search ">
 
@@ -62,6 +63,7 @@
     
           <% end %>
           </div>
+      </div>
     </div>
       <%= yield %>
 
