--- a/app/assets/stylesheets/nav-bar.scss
+++ b/app/assets/stylesheets/nav-bar.scss
@@ -50,3 +50,57 @@
 		background-color: $friends-color;
 	}
 }
+
+.evilnav {
+	background-color: white;
+	height: 60px;
+	width: 100%;
+	position: fixed;
+	top: 0;
+
+	.evilwrapper{
+	width: 80%;
+	margin-left: auto;
+	margin-right: auto;
+	
+
+
+	}	
+
+	.nav-button {
+		height: 60px;
+		text-align: center;
+		width: 25%;
+		float: left;
+		margin: 0;
+		padding: 0;
+	}
+
+	.nav-big-button {
+		height: 60px;
+		text-align: center;
+		width: 75%;
+		float: left;
+		margin: 0;
+	}
+	.nav-button img {
+		padding-top: 5px;
+		width: 50px;
+		height: auto;
+	}
+	.nav-button-search{
+		background-color: $search-color;	
+
+	} 
+	.nav-button-trades {
+		background-color:  $trade-color;		
+	}
+	.nav-button-user{
+		background-color: $user-color;
+
+	}
+	.nav-button-friends{
+		background-color: $friends-color;
+	}
+
+}
