Removed multiverseid from displaying with card, fixed card search so that query returns activerecord object

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -60,7 +60,7 @@
 							<%= link_to(listed_card.card.name, card_path)  %>
 						</td>
 						<td>							
-							 <%= listed_card.card.multiverseid %> - <%= listed_card.card.card_set.name %>	 
+							 <%= listed_card.card.card_set.name %>	 
 						</td>
 							<% type_array = [] %>
 							<%  listed_card.card.card_types.each { |type| type_array << type.name  } %>
