added show card functionality to the cards_controller....links to cards on the show user page now work correctly.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -51,13 +51,13 @@
 							<h4>Propose Trade</h4>
 						</th>
 					</tr>
-						<% current_user.tradeable_cards.each do |listed_card| %>
+						<% @user.tradeable_cards.each do |listed_card| %>
 					<tr>
 						<td>
 							<%= listed_card.amount %>
 						</td>
 						<td>
-							<%= link_to(listed_card.card.name, card_path)  %>
+							<%= link_to(listed_card.card.name, card_path(listed_card.card.id))  %>
 						</td>
 						<td>							
 							 <%= listed_card.card.multiverseid %> - <%= listed_card.card.card_set.name %>	 
