Added javascript onload function to make sure section-inner is always full screen.

--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -1,6 +1,8 @@
 
 
-<div class="section-inner search-theme mobile-collapse">
+<div class="yowhowho section-inner search-theme mobile-collapse">
+  
+
 	<%= render '/cards/search' %>
 
 <!-- if statement needs to be fixed, this is a lazy hack to get it to work
