--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,6 +54,9 @@
           <div class="nav-button nav-button-friends">
             <%= link_to image_tag(src = "http://cdn.flaticon.com/png/256/47352.png"), friends_path  %>
           </div>    
+           <div class= "footer mobile-collapse">
+      MAGIC DADDIES
+    </div>  
 
           
          <% else %>
@@ -65,11 +68,10 @@
           </div>
       </div>
     </div>
+
       <%= yield %>
 
-    <div class= "section-inner footer mobile-collapse">
-      MAGIC DADDIES
-    </div>  
+   
 
   </body>
 
