--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
-<div class="section-inner user-theme mobile-collapse" >
-
+<div class="yowhowho section-inner user-theme mobile-collapse" >
+<div class="sidejerk">SIDEJERK
+  </div>
 
 
 <br/>	
