--- a/app/assets/stylesheets/cardsdisplay.scss
+++ b/app/assets/stylesheets/cardsdisplay.scss
@@ -10,7 +10,6 @@ padding-bottom: 50px;
 width: 30%;
 height: 800px;
 float: left;
-margin-right: 5%;
 padding-bottom: 50px;
 color: white;
 }
@@ -24,7 +23,15 @@ img.card {
 display: block;
 margin-left: auto;
 margin-right: auto; 
-width: 256px ;
-height: 370px ;
+width: 210px ;
+height: 300px ;
+}
+
+div.sidejerk{
+	background-color: red;
+	position: absolute;
+	z-index: 10;
+	width: 100px; 
+	height:100px;
 }
 
