--- a/app/assets/stylesheets/headerfooter.scss
+++ b/app/assets/stylesheets/headerfooter.scss
@@ -18,11 +18,13 @@
 }
 
 .footer {
-	margin-right: auto;
-	margin-left: auto;
+
 	background-color: $headfoot-color;
 	color: #FFF;
 	text-align: center;
-	margin-bottom: 0%;
+	bottom: 0%;
+	width: 80%;
+	position:fixed;
+
 }
 
