--- a/app/views/cards/_card_display.html.erb
+++ b/app/views/cards/_card_display.html.erb
@@ -6,11 +6,8 @@
 				<div class="thirds clearfix">
 					<% i = 0 %>
 					<% @cards.each do |card| %>
-						<% i += 1 %>
-						<% j = "first" if i == 1 %>
-						<% j = "second" if i == 2 %>
-						<% j = "last" if i == 3 %>
-						<div class="one-third one-third-<%= "#{j}" %> mobile-collapse">
+						
+						<div class="one-third  mobile-collapse">
 						<!-- <div class="one-third mobile-collapse"> -->
 							<img class="card search-border" src="http://mtgimage.com/setname/<%="#{card.card_set.name}"%>/<%= "#{card.name}" %>.jpg" alt="A bird on a fence" />
 							<h2>Card Name: <%= card['name'] %>  <%= card['manaCost'] %> </h2>
