--- a/app/views/trades/show.html.erb
+++ b/app/views/trades/show.html.erb
@@ -5,13 +5,13 @@
 			<h2>Your Cards</h2>
 			<% current_user.tradeable_cards.each do |listed_card| %>
 				<%= check_box_tag "trade[cards_from_initiator][]", listed_card.id, (true if @trade.cards_from_initiator.include?(listed_card.id)), disabled: true %>
-				<%= listed_card.card.name %> <br>
+				<%= listed_card.card.name %> x <%= listed_card.amount %> <br>
 			<% end %>
 
 			<h2><%= @user.first_name%>'s Cards</h2>
 			<% @user.tradeable_cards.each do |listed_card| %>
 				<%= check_box_tag "trade[cards_from_receiver][]", listed_card.id, (true if @trade.cards_from_receiver.include?(listed_card.id)), disabled: true %>
-				<%= listed_card.card.name %> <br>
+				<%= listed_card.card.name %> x <%= listed_card.amount %> <br>
 			<% end %>
 
 	<% elsif @trade.receiver == current_user %>
@@ -19,13 +19,15 @@
 			<h2>Your Cards</h2>
 			<% current_user.tradeable_cards.each do |listed_card| %>
 				<%= check_box_tag "trade[cards_from_receiver][]", listed_card.id, (true if @trade.cards_from_receiver.include?(listed_card.id)), disabled: true %>
-				<%= listed_card.card.name %> <br>
+
+				<%= listed_card.card.name %> x <%= listed_card.amount %> <br>
 			<% end %>
 
 			<h2><%= @user.first_name%>'s Cards</h2>
 			<% @user.tradeable_cards.each do |listed_card| %>
 				<%= check_box_tag "trade[cards_from_initiator][]", listed_card.id, (true if @trade.cards_from_initiator.include?(listed_card.id)), disabled: true %>
-				<%= listed_card.card.name %> <br>
+				
+				<%= listed_card.card.name %> x <%= listed_card.amount %> <br>
 			<% end %>
 
 	<% end %>
