pulling phils updates to list models for geo binders

--- a/app/views/binders/show.html.erb
+++ b/app/views/binders/show.html.erb
@@ -1,8 +1,5 @@
-<%= @card.user_id %>
+<%= @users.each do |user| %>
+<%= user.name %>
 
-<%= @car.each do |card| %>
-
-<%= card.user_id %>
 
 <% end %>
-
