--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -1,6 +1,6 @@
 
 
-<div class="yowhowho section-inner search-theme mobile-collapse">
+<div class=" section-inner search-theme mobile-collapse">
   
 
 	<%= render '/cards/search' %>
@@ -9,7 +9,7 @@
      if only a single card is returned -->
 <% if @cards.respond_to? :count %>
 
-<h1>Cards <small><%= page_entries_info @cards %></small></h1>
+<h1><small><%= page_entries_info @cards %></small></h1>
 		
 		<%= render '/cards/card_display' %>
 
