--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,9 +54,7 @@
           <div class="nav-button nav-button-friends">
             <%= link_to image_tag(src = "http://cdn.flaticon.com/png/256/47352.png"), friends_path  %>
           </div>    
-           <div class= "footer mobile-collapse">
-      MAGIC DADDIES
-    </div>  
+          
 
           
          <% else %>
@@ -74,6 +72,8 @@
    
 
   </body>
-
+<div class = "footer">
+MAGIC DADDIES
+</div>
 
 </html>
