--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,7 +31,15 @@
 	margin: 0;
 	padding: 0;
 }
-	
+
+	h2 {
+		font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+		font-size: 2em;
+	}	
+	p {
+		font-family: Baskerville, "Baskerville Old Face", "Hoefler Text", Garamond, "Times New Roman", serif;
+		font-size: 1em;
+		}
 
 	label {
 		font-size: 2em;
@@ -39,11 +47,7 @@
 	
 
 
-p {
-	margin: 0 0 1em 0;
-	font-size: 93%;
-	line-height: 1.5em;
-}
+
 
 div.center{
 	margin-right: auto;
@@ -97,7 +101,7 @@ div.body-content-user {
 
 @media screen and (max-width: 900px) {
 	div.one-third {
-	width: 47.5% ;  /* sets width of colum to 47.5% from 30%. So page only fits 2 "thirds" instead of three */
+	width: 45% ;  /* sets width of colum to 47.5% from 30%. So page only fits 2 "thirds" instead of three */
 
 	}
 
@@ -129,6 +133,16 @@ div.body-content-user {
 }
 
 @media screen and (max-width: 640px) {
+	h2 {
+		font-size: 3.5em;
+	}	
+	p {
+		font-size: 2em;
+		}
+
+	label {
+		font-size: 2em;
+	}
 	div.mobile-expand {
 	width: 100%; 
 
@@ -139,6 +153,11 @@ div.body-content-user {
 	
 	}
 	div.nav-mobile-collapse{
+		width: 100%;
+	}
+
+	.footer{
+		margin-left: 0%;
 		width: 100%;
 	}
 	.evilwrapper{
