--- a/app/assets/stylesheets/searchbox.scss
+++ b/app/assets/stylesheets/searchbox.scss
@@ -6,8 +6,9 @@
 div.search-section {
 	width: 100%;
 	border-radius: 15px 15px 15px 15px;
-	background-color: darken($search-color, 5%);
+	background-color: darken($search-color, 1%);
 	height: auto;
+	padding-top: 5%;
 	margin-left: auto;
     margin-right: auto; 
     margin-bottom: 50px;
