--- a/app/views/cards/_card_display.html.erb
+++ b/app/views/cards/_card_display.html.erb
@@ -3,23 +3,27 @@
 			
 				<!-- thirds -->
 
-				<div class="thirds clearfix">
-					<% i = 0 %>
+		
 					<% @cards.each do |card| %>
-						
+					
+
 						<div class="one-third  mobile-collapse">
+						
 						<!-- <div class="one-third mobile-collapse"> -->
-							<img class="card search-border" src="http://mtgimage.com/setname/<%="#{card.card_set.name}"%>/<%= "#{card.name}" %>.jpg" alt="A bird on a fence" />
-							<h2>Card Name: <%= card['name'] %>  <%= card['manaCost'] %> </h2>
+							<%= link_to card_path(card.id) do%>
+
+								<img class="card " src="http://mtgimage.com/setname/<%="#{card.card_set.name}"%>/<%= "#{card.name}" %>.jpg" alt="A bird on a fence" />
+							<% end %>
+
+							<h2><%= card['name'] %>  <%= card['manaCost'] %> </h2>
 							<p><%= card['type'] %></p> <br/>
-							<p>Card Text: <%= card['text'] %> </p> <br/>
+							<p><%= card['text'] %> </p> <br/>
 							<p><%= card['flavor'] %></p> <br/>
 							<p><%= card['artist'] %></p> 
 							<p> <%= link_to "Add Card to Trade Binder", add_to_tradeable_path(card.id), :method => :put %> </p> 					
 							<p><%= link_to "Add Card to Wishlist", add_to_wanted_path(card.id), :method => :put %></p> 
 						</div>
-
 					<% end %>
-				</div><!--/one-third-->
+		
 		
 	<%# end %>
