added wantable and tradeable buttons to card display

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -41,3 +41,17 @@ div.trade-theme{
 	padding: 0,0,0,0;
 	
 }
+
+
+// buttons
+.wantwish{	
+
+	margin: 0 5% 0 5%;
+	background-color: $trade-color;
+	border-radius: 15px 15px 15px 15px;
+	width: 40%;
+	height: 20%;
+	float:left; 
+	
+}
+
