--- a/app/views/cards/_card_display.html.erb
+++ b/app/views/cards/_card_display.html.erb
@@ -12,16 +12,25 @@
 						<!-- <div class="one-third mobile-collapse"> -->
 							<%= link_to card_path(card.id) do%>
 
-								<img class="card " src="http://mtgimage.com/setname/<%="#{card.card_set.name}"%>/<%= "#{card.name}" %>.jpg" alt="A bird on a fence" />
-							<% end %>
+							<img class="card " src="http://mtgimage.com/setname/<%="#{card.card_set.name}"%>/<%= "#{card.name}" %>.jpg" alt="A bird on a fence" />
+<% end %>
 
 							<h2><%= card['name'] %>  <%= card['manaCost'] %> </h2>
 							<p><%= card['type'] %></p> <br/>
 							<p><%= card['text'] %> </p> <br/>
 							<p><%= card['flavor'] %></p> <br/>
 							<p><%= card['artist'] %></p> 
-							<p> <%= link_to "Add Card to Trade Binder", add_to_tradeable_path(card.id), :method => :put %> </p> 					
-							<p><%= link_to "Add Card to Wishlist", add_to_wanted_path(card.id), :method => :put %></p> 
+						  	<%= link_to add_to_tradeable_path(card.id), :method => :put do%> 
+								<div class = "wantwish"> 		
+									<img  src="http://cdn.flaticon.com/png/256/46041.png">
+								</div>
+							<% end %>
+							<%= link_to add_to_wanted_path(card.id), :method => :put do %>
+								<div class = "wantwish"> 
+									<img src="http://cdn.flaticon.com/png/256/43534.png">
+								</div>
+							<%end%> 
+							<br/>
 						</div>
 					<% end %>
 		
